<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ftvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"

                android:text="@string/ftvTitle"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fetsavevalue"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/fetsavevalue"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/fBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fBtn" />

            <TextView
                android:id="@+id/ftvReturnValue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/ftvReturnValue"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>